--- a/style.css
+++ b/style.css
@@ -21,22 +21,22 @@ header.header {
 }
 
 .heder-top {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 10px 0;
     max-width: 1200px;
     box-sizing: border-box;
     margin: 0 auto;
 }
 
 .logo img {
-    width: 130px;
+    width: 100px;
     height: auto;
 }
 
 .main-menu {
     position: absolute;
     right: 66px;
-    top: 31px;
+    top: 20px;
+    display: inline-flex;
 }
 
 nav a {
@@ -48,6 +48,31 @@ nav a {
     display: inline-block;
 }
 
+.header-profile img {
+    width: 50px;
+    border-radius: 50px;
+    margin-left: 50px;
+    margin-right: 10px;
+    margin-top: 4px;
+}
+
+.main-menu nav a {
+    display: inline-block;
+    padding: 11px 17px;
+    font-size: 20px;
+    transition: 0.5s;
+}
+
+.main-menu nav a:hover {
+    color: #088dcd;
+}
+
+.main-menu nav a i span {
+    position: absolute;
+    bottom: 3px;
+    font-size: 14px;
+    color: #088dcd;
+}
 /* User Image & Followers */
 .user-img img {
     width: 192px;
@@ -109,9 +134,6 @@ section.profile-menu nav {
     display: inline;
 }
 
-/* section.profile-menu nav .profile-name {
-    display: inline-block;
-} */
 .profile-name {
     font-size: 31px;
     margin-right: 60px;
@@ -131,6 +153,11 @@ section.profile-menu nav a {
     font-size: 18px;
     margin-right: 23px;
     font-weight: 500;
+    transition: 0.5s;
+}
+
+section.profile-menu nav a:hover {
+    color: #088dcd;
 }
 
 .profileMenu {
@@ -155,8 +182,74 @@ footer {
         linear-gradient(to right, #fff, #088dcd, #fff);
     background-origin: padding-box, border-box;
     background-repeat: no-repeat; /* this is important */
+    padding: 40px 0;
 }
 
+.download-apps button {
+    display: block;
+    padding: 7px 24px;
+    margin-bottom: 25px;
+    background: transparent;
+    border-radius: 5px;
+    transition: 0.3s;
+    border: 1px solid #000;
+    cursor: pointer;
+}
+.download-apps button:hover {
+    color: #088dcd;
+    border: 1px px solid;
+}
+.download-apps i {
+    margin-right: 10px;
+}
+
+.download-apps i {
+    margin-right: 10px;
+}
+
+h3.footer-header {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.footer-top ul li {
+    display: block;
+}
+
+.footer-top ul li a {
+    display: block;
+    color: rgb(116, 109, 109);
+    margin-bottom: 14px;
+    font-size: 15px;
+    transition: 0.5s;
+}
+
+.footer-top ul li a:hover {
+    color: #088dcd;
+}
+
+.footer-top ul li a i {
+    margin-right: 11px;
+    color: rgb(116, 109, 109);
+}
+.footer-top ul li a:hover i {
+    color: #088dcd;
+}
+
+.footer-top p {
+    margin-bottom: 15px;
+    color: rgb(116, 109, 109);
+}
+
+.footer-top p i {
+    margin-right: 13px;
+}
+
+.footer-logo img {
+    margin-bottom: 10px;
+    width: 120px;
+}
 /* Footer Bottom Area */
 .footer-bottom {
     background-color: #ddd;
